Routing and api implementation added
